--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-underline": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
+    "appwrite": "^18.2.0",
+    "framer-motion": "^12.23.12",
+    "next": "15.5.0",
+    "next-auth": "^4.24.11",
+    "openssl": "^2.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
